--- a/app/src/main/res/layout/layout_select_account.xml
+++ b/app/src/main/res/layout/layout_select_account.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.selvakumarsm.elasticmodule2.ElasticView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryBackground"
+    app:expandedSceneId="@+id/expanded"
+    app:collapsedSceneId="@+id/collapsed"
+    app:initialState="expanded"
     app:layoutDescription="@xml/layout_select_account_scene">
 
     <androidx.constraintlayout.widget.Guideline
@@ -122,4 +126,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</com.selvakumarsm.elasticmodule2.ElasticView>
