--- a/app/src/main/res/xml/layout_select_repayment_scene.xml
+++ b/app/src/main/res/xml/layout_select_repayment_scene.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--Using Motion scenes and Motion layout is overkill for this usecase but for future complex animations this can come handy.-->
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Transition/>
+    <Transition />
 
     <ConstraintSet android:id="@+id/expand">
         <Constraint android:id="@+id/labelQuestion">
@@ -13,8 +12,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toTopOf="@+id/guideline_top" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/labelNote">
             <Layout
@@ -24,8 +22,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/labelQuestion" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/rvRepaymentOptions">
             <Layout
@@ -35,8 +32,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/labelNote" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/btnCreateOwnPlan">
             <Layout
@@ -45,8 +41,7 @@
                 android:layout_marginTop="25dp"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/rvRepaymentOptions" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/btnSelectBank">
             <Layout
@@ -55,8 +50,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/labelEMI">
             <Layout
@@ -66,8 +60,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/labelDuration"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/tvEMIAmount">
             <Layout
@@ -76,9 +69,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/tvEMIDuration"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
-                app:layout_constraintTop_toBottomOf="@+id/labelEMI"/>
-            <PropertySet
-                android:visibility="invisible"/>
+                app:layout_constraintTop_toBottomOf="@+id/labelEMI" />
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/labelDuration">
             <Layout
@@ -87,8 +79,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/ivExpand"
                 app:layout_constraintStart_toEndOf="@+id/labelEMI"
                 app:layout_constraintTop_toTopOf="@+id/guideline_top" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/tvEMIDuration">
             <Layout
@@ -97,9 +88,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/ivExpand"
                 app:layout_constraintStart_toEndOf="@+id/tvEMIAmount"
-                app:layout_constraintTop_toBottomOf="@+id/labelDuration"/>
-            <PropertySet
-                android:visibility="invisible"/>
+                app:layout_constraintTop_toBottomOf="@+id/labelDuration" />
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/ivExpand">
             <Layout
@@ -107,9 +97,8 @@
                 android:layout_height="12dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tvEMIDuration"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-                app:layout_constraintTop_toTopOf="@+id/labelDuration"/>
-            <PropertySet
-                android:visibility="invisible"/>
+                app:layout_constraintTop_toTopOf="@+id/labelDuration" />
+            <PropertySet android:visibility="invisible" />
         </Constraint>
     </ConstraintSet>
 
@@ -121,8 +110,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toTopOf="@+id/guideline_top" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/labelNote">
             <Layout
@@ -132,8 +120,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/labelQuestion" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/rvRepaymentOptions">
             <Layout
@@ -143,8 +130,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/labelNote" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/btnCreateOwnPlan">
             <Layout
@@ -153,8 +139,7 @@
                 android:layout_marginTop="25dp"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/rvRepaymentOptions" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/btnSelectBank">
             <Layout
@@ -163,8 +148,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-            <PropertySet
-                android:visibility="invisible"/>
+            <PropertySet android:visibility="invisible" />
         </Constraint>
         <Constraint android:id="@+id/labelEMI">
             <Layout
@@ -174,8 +158,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/labelDuration"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/tvEMIAmount">
             <Layout
@@ -184,9 +167,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/tvEMIDuration"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
-                app:layout_constraintTop_toBottomOf="@+id/labelEMI"/>
-            <PropertySet
-                android:visibility="visible"/>
+                app:layout_constraintTop_toBottomOf="@+id/labelEMI" />
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/labelDuration">
             <Layout
@@ -195,8 +177,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/ivExpand"
                 app:layout_constraintStart_toEndOf="@+id/labelEMI"
                 app:layout_constraintTop_toTopOf="@+id/guideline_top" />
-            <PropertySet
-                android:visibility="visible"/>
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/tvEMIDuration">
             <Layout
@@ -205,9 +186,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/ivExpand"
                 app:layout_constraintStart_toEndOf="@+id/tvEMIAmount"
-                app:layout_constraintTop_toBottomOf="@+id/labelDuration"/>
-            <PropertySet
-                android:visibility="visible"/>
+                app:layout_constraintTop_toBottomOf="@+id/labelDuration" />
+            <PropertySet android:visibility="visible" />
         </Constraint>
         <Constraint android:id="@+id/ivExpand">
             <Layout
@@ -215,9 +195,8 @@
                 android:layout_height="12dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tvEMIDuration"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-                app:layout_constraintTop_toTopOf="@+id/labelDuration"/>
-            <PropertySet
-                android:visibility="visible"/>
+                app:layout_constraintTop_toTopOf="@+id/labelDuration" />
+            <PropertySet android:visibility="visible" />
         </Constraint>
     </ConstraintSet>
 </MotionScene>
