--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,13 +4,18 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="pureBlack">#000000</color>
+    <color name="black4">#464a4c</color>
+    <color name="black3">#3c3f40</color>
+    <color name="black2">#323536</color>
     <color name="pureGrey">#121212</color>
     <color name="pureWhite">#FFFFFF</color>
-    <color name="lightWhite">#dbddde</color>
+    <color name="lightWhite">#cfcfcf</color>
+    <color name="white3">#c0c0c0</color>
     <color name="pureBrown">#900C3F</color>
     <color name="lightBlue">#b0dbf4</color>
     <color name="mediumPurple">#9370DB</color>
 
+    <color name="primaryBackground">@color/black4</color>
     <color name="colorPrimaryText">@color/pureBlack</color>
     <color name="colorSecondaryText">@color/pureGrey</color>
     <color name="statusBarColor">@android:color/background_light</color>
