--- a/app/src/main/res/layout/layout_select_repayment.xml
+++ b/app/src/main/res/layout/layout_select_repayment.xml
@@ -47,11 +47,10 @@
 
     <TextView
         android:id="@+id/labelNote"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/label_repayment_note"
-        android:textSize="16sp"
-        />
+        android:text="@string/label_repayment_note"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRepaymentOptions"
@@ -83,30 +82,28 @@
 
     <TextView
         android:id="@+id/labelEMI"
+        style="@style/CollapsedSubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/label_emi"
-        android:textSize="16sp"
-      />
+        android:text="@string/label_emi"/>
 
     <TextView
         android:id="@+id/tvEMIAmount"
-        style="@style/CollapsedPrimaryTextTheme"
+        style="@style/CollapsedTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="$ 4,247 /mo" />
 
     <TextView
         android:id="@+id/labelDuration"
+        style="@style/CollapsedSubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/label_duration"
-        android:textSize="16sp"
-      />
+        android:text="@string/label_duration" />
 
     <TextView
         android:id="@+id/tvEMIDuration"
-        style="@style/CollapsedPrimaryTextTheme"
+        style="@style/CollapsedTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="12 months"
