--- a/app/src/main/res/layout/layout_repayment_item.xml
+++ b/app/src/main/res/layout/layout_repayment_item.xml
@@ -51,6 +51,7 @@
 
     <TextView
         android:id="@+id/tvTenure"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -62,6 +63,7 @@
 
     <TextView
         android:id="@+id/labelCalculations"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
