--- a/app/src/main/res/layout/layout_select_account.xml
+++ b/app/src/main/res/layout/layout_select_account.xml
@@ -53,11 +53,11 @@
 
     <TextView
         android:id="@+id/labelNote"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/label_loan_note"
-        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/labelQuestion" />
@@ -87,13 +87,13 @@
 
     <TextView
         android:id="@+id/tvBank"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="25dp"
         android:fontFamily="serif"
         android:text="@string/paytm_bank"
-        android:textColor="@color/colorPrimaryText"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
@@ -102,11 +102,11 @@
 
     <TextView
         android:id="@+id/tvMobNum"
+        style="@style/PrimarySubTextTheme"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/paytm_num"
-        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/tvBank"
         app:layout_constraintStart_toStartOf="@+id/tvBank"
         app:layout_constraintTop_toBottomOf="@+id/tvBank" />
